test/functions/iterators/vass/const-ref-iterator-2.good
const-ref-iterator-2.chpl:12: error: illegal lvalue in assignment
